# parsefsh

./: .gitignore  CMakeLists.txt
src/: parsetrk.cpp  splitimg.cpp
